--- a/.github/sync-config.json
+++ b/.github/sync-config.json
@@ -70,6 +70,10 @@
         {
           "path": ".github/template-workflows/cascade-monitor.yml",
           "description": "Cascade monitoring and SLA management"
+        },
+        {
+          "path": ".github/template-workflows/codeql.yml",
+          "description": "CodeQL security scanning with language detection"
         }
       ],
       "template_only": [
