--- a/.github/workflows/init-complete.yml
+++ b/.github/workflows/init-complete.yml
@@ -445,8 +445,14 @@ jobs:
             cp ".github/fork-resources/copilot-instructions.md" ".github/copilot-instructions.md"
             git add ".github/copilot-instructions.md"
           fi
-          
-          
+
+          # Copy fork-specific Dependabot configuration
+          if [ -f ".github/fork-resources/dependabot.yml" ]; then
+            echo "Installing fork-specific Dependabot configuration..."
+            cp ".github/fork-resources/dependabot.yml" ".github/dependabot.yml"
+            git add ".github/dependabot.yml"
+          fi
+
           # Copy GitHub Copilot firewall configuration
           if [ -f ".github/fork-resources/copilot-firewall-config.json" ]; then
             echo "Installing GitHub Copilot firewall configuration..."
