--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: read
+
 # Only run in the template repository, not in forks
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
