--- a/.github/workflows/init-complete.yml
+++ b/.github/workflows/init-complete.yml
@@ -93,7 +93,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-          token: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure Git
         uses: ./.github/local-actions/configure-git
