docs(ci): clarify template repository usage and local actions restoration
Update action description to reflect sync operation usage
Improve comment explaining fork_integration local actions requirement

--- a/.github/local-actions/sync-config-applier/action.yml
+++ b/.github/local-actions/sync-config-applier/action.yml
@@ -11,7 +11,7 @@ inputs:
     required: false
     default: 'main'
   template_repo_url:
-    description: 'URL of the template repository (not used during initialization, kept for backward compatibility)'
+    description: 'URL of the template repository (used for sync operations, not required during initialization)'
     required: false
     default: ''
 
